# BoopGame

./: .gitignore  .~lock.Untitled 1.odt#  CMakeLists.txt  README.md  main.cpp
include/: .linked_list.hpp.swp  board.hpp  game_elements.hpp  graphics.hpp  linked_list.hpp  pieces.hpp
src/: board.cpp  graphic_board.cpp
